--- a/stackgres-k8s/install/helm/stackgres-operator/templates/secret.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/secret.yaml
@@ -1,11 +1,15 @@
-{{- if and .Values.cert.key .Values.cert.crt }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 type: Opaque
+{{- if or .Values.cert.key .Values.cert.crt }}
 data:
+  {{- if .Values.cert.key }}
   root.key: {{ .Values.cert.key }}
+  {{- end }}
+  {{- if .Values.cert.crt }}
   server.crt: {{ .Values.cert.crt }}
-{{ end }}
+  {{- end }}
+{{- end }}
