feat: added s3compatible to backup and split prefix into bucket and path

--- a/stackgres-k8s/e2e/spec/aks/backup-with-aks-storage.values.yaml
+++ b/stackgres-k8s/e2e/spec/aks/backup-with-aks-storage.values.yaml
@@ -11,7 +11,8 @@ config:
     minio:
       create: false
     azureblob:
-      prefix: azure://backup-with-aks-storage/backups 
+      bucket: backup-with-aks-storage
+      path: /backups 
       account:
         name: storage-account
         key: account
