--- a/stackgres-k8s/src/operator/src/main/resources/backup-default-values.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/backup-default-values.properties
@@ -4,13 +4,13 @@ fullWindow=1
 retention=5
 tarSizeThreshold=1073741823
 uploadDiskConcurrency=1
-storage.type=s3
-storage.s3.credentials.accessKey.key=accesskey
-storage.s3.credentials.accessKey.name=minio
-storage.s3.credentials.secretKey.key=secretkey
-storage.s3.credentials.secretKey.name=minio
-storage.s3.endpoint=http://minio:9000
-storage.s3.forcePathStyle=true
-storage.s3.prefix=s3://stackgres
-storage.s3.region=k8s
+storage.type=s3compatible
+storage.s3compatible.credentials.accessKey.key=accesskey
+storage.s3compatible.credentials.accessKey.name=minio
+storage.s3compatible.credentials.secretKey.key=secretkey
+storage.s3compatible.credentials.secretKey.name=minio
+storage.s3compatible.endpoint=http://minio:9000
+storage.s3compatible.forcePathStyle=true
+storage.s3compatible.bucket=stackgres
+storage.s3compatible.region=k8s
 
