--- a/stackgres-k8s/install/helm/stackgres-operator/crds/cluster-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/cluster-crd.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     "helm.sh/hook": crd-install
 spec:
-  group:  stackgres.io
+  group: stackgres.io
   versions:
     - name: v1alpha1
       served: true
@@ -19,62 +19,125 @@ spec:
   validation:
     openAPIV3Schema:
       type: object
-      required: ["spec"]
-      description: "Params for StackGres Cluster creation"
+      required: ["metadata", "spec"]
       properties:
-          spec:
-            type: object
-            properties:
-              instances:
-                type: integer
-                # minimum: 1 # see https://gitlab.com/ongresinc/stackgres/issues/102
-                description: "Number of instances to be created"
-              pgVersion:
-                type: string
-                description: "PostgreSQL version for the new cluster"
-              pgConfig:
-                type: string
-                description: "PostgreSQL configuration to apply"
-              connectionPoolingConfig:
-                type: string
-                description: "Pooling configuration to apply"
-              resourceProfile:
-                type: string
-                description: "Resource profile size to apply"
-              volumeSize:
-                type: string
-                pattern: '^[0-9]+(\.[0-9]+)?(Mi|Gi|Ti)$'
-                description: "Storage volume size"
-              storageClass:
-                type: string
-                description: "Storage class name to be used for the cluster"
-              backupConfig:
-                type: string
-                description: "Backup config to apply"
-              restore:
-                type: object
-                description: "Restore config to apply"
-                properties:
-                  fromBackup:
-                    type: string
-                    description: "UID of the Backup CR to restore"
-                  downloadDiskConcurrency:
-                    type: integer
-                    description: "Indicate how many download streams to have during restoration"
-              sidecars:
-                type: array
-                items:
+        metadata:
+          type: object
+          properties:
+            name:
+              type: string
+              description: >
+                The name of the StackGres cluster to be created. Following
+                [Kubernetes naming conventions](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/architecture/identifiers.md),
+                it must be an rfc1035/rfc1123 subdomain, that is, up to 253 characters consisting of one or more
+                lowercase labels separated by '.'. Where each label is an alphanumeric (a-z, and 0-9) string, with a
+                maximum length of 63 characters, with the '-' character allowed anywhere except the first or last
+                character.
+
+                This name needs to be unique across all StackGres clusters in the same namespace. The full cluster name
+                will include the namespace in which the cluster will be created.
+        spec:
+          type: object
+          properties:
+            pgVersion:
+              type: string
+              description: >
+                Postgres version to use for the new cluster. It can be either of:
+                *  The string 'latest', which will automatically select the latest major.minor Postgres version.
+                *  A major version, like '12' or '11', which will select that major version and the latest minor version.
+                *  A specific major.minor version, like '12.2'.
+            instances:
+              type: integer
+              minimum: 1
+              maximum: 16
+              description: >
+                Number of StackGres instances to be created. Each instance will contain one Postgres server. Out of all
+                of the Postgres servers, one will be elected as the master, the rest will remain as read-only replicas.
+            resourceProfile:
+              type: string
+              description: >
+                Name of the [StackGresProfile](https://stackgres.io/doc/latest/04-postgres-cluster-management/03-resource-profiles/)
+                to use. A StackGresProfile defines CPU and memory limits. Must exist before creating the cluster. If you
+                don't select a profile, a default (currently: 1 core, 2 GiB RAM) one will be used.
+            volumeSize:
+              type: string
+              pattern: '^[0-9]+(\.[0-9]+)?(Mi|Gi|Ti)$'
+              description: >
+                Size of the PersistentVolume to be created for each instance of the cluster. Size must be specified
+                either in Mebibytes, Gibibytes or Tebibytes (multiples of 2^20, 2^30 or 2^40, respectively).
+            storageClass:
+              type: string
+              description: >
+                Name of an existing StorageClass in the K8s cluster, that will be used to create the PersistentVolumes
+                for the instances of this cluster.
+            pgConfig:
+              type: string
+              description: >
+                Name of the
+                [StackGresPostgresConfig](https://stackgres.io/doc/latest/04-postgres-cluster-management/02-configuration-tuning/02-postgres-configuration/)
+                to use for this cluster. It must exist. If not set, a default Postgres config, for the major version
+                selected, will be used.
+            connectionPoolingConfig:
+              type: string
+              description: >
+                Name of the
+                [StackGresConnectionPoolingConfig](https://stackgres.io/doc/latest/04-postgres-cluster-management/02-configuration-tuning/03-connection-pooling-configuration/)
+                to use for this cluster. Each pod contains a sidecar with a connection pooler
+                (currently: [PgBouncer](https://www.pgbouncer.org/)). The connection pooler is implemented as a sidecar.
+                If not selected, a default configuration will be used. Note that you may disable connection pooling
+                altogether by not including the `pgbouncer` element in the `sidecars` property of the cluster.
+            backupConfig:
+              type: string
+              description: >
+                Name of the
+                [StackGresBackupConfig](https://stackgres.io/doc/latest/04-postgres-cluster-management/04-backups/)
+                to use for this cluster. This will define the backups policy, storage and retention, among others, to
+                apply to this cluster. If not set, a default backup config will be used.
+            prometheusAutobind:
+              type: boolean
+              description: >
+                If enabled, a ServiceMonitor will be created for each Prometheus instance found in order to collect
+                metrics.
+            restore:
+              type: object
+              properties:
+                fromBackup:
                   type: string
-                description: "List of sidecars to include in the cluster"
-              prometheusAutobind:
-                type: boolean
-                description: "If enabled a ServiceMonitor will be created for each Prometheus instance found in order to collect metrics"
-            required: [
-              "instances",
-              "pgVersion",
-              "volumeSize"
-            ]
+                  description: >
+                    Initialize the cluster data by restoring an existing backup. If not used, cluster will be
+                    initialized empty. Set to the UID of an existing
+                    [StackGresBackup](https://stackgres.io/doc/latest/04-postgres-cluster-management/04-backups/)
+                    from which to restore the data. The backup needs to be in the same namespace.
+                downloadDiskConcurrency:
+                  type: integer
+                  minimum: 1
+                  description: >
+                    The backup fetch process may fetch several streams in parallel. Specify a value larger than one
+                    for parallel fetching.
+            sidecars:
+              type: array
+              items:
+                type: string
+                enum:
+                  - envoy
+                  - connection-pooling
+                  - prometheus-postgres-exporter
+                  - postgres-util
+              description: >
+                StackGres cluster pods leverage the sidecar pattern, and next to the main Postgres containers, there
+                will be automatically created other pods with auxiliary functionality. If you set this property, only
+                those sidecar names explicitly included in this array will be created.
+            nonProduction:
+              type: object
+              properties:
+                disableClusterPodAntiAffinity:
+                  type: boolean
+                  description: >
+                    It is a best practice, on non-containerized environments, when running production workloads, to
+                    run each database server on a different server (virtual or physical), i.e., not to co-locate more
+                    than one database server per host.
 
-
-
-
+                    The same best practice applies to databases on containers. By default, StackGres will not allow to
+                    run more than one StackGres pod on a given K8s node. Set this property to true to allow more than
+                    one StackGres pod per node.
+          required: [ "instances", "pgVersion", "volumeSize" ]
