feat: renaming StackGres Custom Resource Definitions to a new convention

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/backupconfig-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/backupconfig-cr.yaml
@@ -12,7 +12,7 @@ Throw an error if not create minio with default backup options
 {{- end -}}
 {{ if and .Values.config.create .Values.config.backup.create }}
 apiVersion: stackgres.io/v1alpha1
-kind: StackGresBackupConfig
+kind: SGBackupConfig
 metadata:
   name: {{ .Values.cluster.backupconfig }}
   labels:
