--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
@@ -77,8 +77,8 @@ rules:
 - apiGroups: ["stackgres.io"]
   resources:
   - sgpgconfigs
-  - sgprofiles
-  - sgconnectionpoolingconfigs
+  - sginstanceprofiles
+  - sgpoolconfigs
   - sgbackupconfigs
   - sgbackups
   - sgrestoreconfigs
