--- a/stackgres-k8s/install/helm/stackgres-operator/crds/poolingconfig-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/poolingconfig-crd.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: sgconnectionpoolingconfigs.stackgres.io
+  name: sgpoolconfigs.stackgres.io
 spec:
   group:  stackgres.io
   versions:
@@ -10,10 +10,12 @@ spec:
       storage: true
   scope: Namespaced
   names:
-    kind: StackGresConnectionPoolingConfig
-    listKind: StackGresConnectionPoolingConfigList
-    plural: sgconnectionpoolingconfigs
-    singular: sgconnectionpoolingconfig
+    kind: SGPoolingConfig
+    listKind: SGPoolingConfigList
+    plural: sgpoolconfigs
+    singular: sgpoolconfig
+    shortNames:
+      - sgpoc
   validation:
     openAPIV3Schema:
       type: object
