--- a/stackgres-k8s/install/helm/stackgres-operator/crds/profile-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/profile-crd.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: sgprofiles.stackgres.io
+  name: sginstanceprofiles.stackgres.io
 spec:
   group:  stackgres.io
   versions:
@@ -10,10 +10,12 @@ spec:
       storage: true
   scope: Namespaced
   names:
-    kind: StackGresProfile
-    listKind: StackGresProfileList
-    plural: sgprofiles
-    singular: sgprofile
+    kind: SGInstanceProfile
+    listKind: SGInstanceProfileList
+    plural: sginstanceprofiles
+    singular: sginstanceprofile
+    shortNames:
+      - sginp
   validation:
     openAPIV3Schema:
       required: ["spec"]
