feat: Update CRDs apiVersion to v1beta1

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/pgbouncerconfig-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/pgbouncerconfig-cr.yaml
@@ -1,5 +1,5 @@
 {{ if .Values.config.create }}
-apiVersion: stackgres.io/v1alpha1
+apiVersion: stackgres.io/v1beta1
 kind: SGPoolingConfig
 metadata:
   name: {{ .Values.cluster.poolingconfig }}
