--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/profiles-crs.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/profiles-crs.yaml
@@ -1,7 +1,7 @@
 {{ if .Values.profiles }}
 {{- range .Values.profiles }}
 ---
-apiVersion: stackgres.io/v1alpha1
+apiVersion: stackgres.io/v1beta1
 kind: SGInstanceProfile
 metadata:
   name: {{ .name }}
