--- a/stackgres-k8s/src/operator/src/test/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/test/resources/application.properties
@@ -10,7 +10,7 @@ stackgres.operatorIP=localhost
 stackgres.operatorVersion=development
 stackgres.containerBuild=3-dev
 stackgres.group=stackgres.io
-stackgres.crd.version=v1alpha1
+stackgres.crd.version=v1beta1
 stackgres.prometheus.allowAutobind=true
 stackgres.prometheus.grafanaEmbedded=false
 stackgres.documentation.uri=https://stackgres.io/doc/
