--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
@@ -1,5 +1,5 @@
 {{ if .Values.cluster.create }}
-apiVersion: stackgres.io/v1alpha1
+apiVersion: stackgres.io/v1beta1
 kind: SGCluster
 metadata:
   name: {{ .Release.Name }}
