--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/pgconfig-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/pgconfig-cr.yaml
@@ -1,5 +1,5 @@
 {{ if .Values.config.create }}
-apiVersion: stackgres.io/v1alpha1
+apiVersion: stackgres.io/v1beta1
 kind: SGPostgresConfig
 metadata:
   name: {{ .Values.cluster.pgconfig }}
