--- a/stackgres-k8s/install/helm/stackgres-operator/crds/cluster-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/cluster-crd.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   group: stackgres.io
   versions:
-    - name: v1alpha1
+    - name: v1beta1
       served: true
       storage: true
   scope: Namespaced
