feat: Renaming pgVersion cluster property to postgresVersion

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
@@ -10,7 +10,7 @@ metadata:
     release: {{ .Release.Name }}
 spec:
   instances: {{ .Values.cluster.instances }}
-  pgVersion: '{{ .Values.config.postgresql.version }}'
+  postgresVersion: '{{ .Values.config.postgresql.version }}'
   pgConfig: '{{ .Values.cluster.pgconfig }}'
   connectionPoolingConfig: '{{ .Values.cluster.poolingconfig }}'
   resourceProfile: '{{ .Values.cluster.profile }}'
