--- a/stackgres-k8s/install/helm/stackgres-operator/crds/backup-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/backup-crd.yaml
@@ -252,7 +252,7 @@ spec:
             dataDir:
               type: string
               description: "The data directory where the backup is taken."
-            pgVersion:
+            postgresVersion:
               type: string
               description: "The PostgreSQL version of the server where backup is taken."
             startLsn:
