feat: Enable basic authentication for REST API

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/secret.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/secret.yaml
@@ -4,8 +4,10 @@ metadata:
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 type: Opaque
-{{- if or .Values.cert.key .Values.cert.crt }}
 data:
+  user: "{{ .Values.authentication.user | b64enc }}"
+  password: "{{ .Values.authentication.password | b64enc }}"
+{{- if or .Values.cert.key .Values.cert.crt }}
   {{- if .Values.cert.key }}
   root.key: {{ .Values.cert.key }}
   {{- end }}
