--- a/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
@@ -97,6 +97,7 @@ spec:
                 {"op":"replace","path":"/webhooks/5/clientConfig/caBundle","value":"'"$CRT"'"}]'
             kubectl patch secret \
               -n '{{ .Release.Namespace }}' '{{ .Release.Name }}' --type json --patch '[
-                {"op":"replace","path":"/data","value":{"root.key":"'"$KEY"'","server.crt":"'"$CRT"'"}}]'
+                {"op":"replace","path":"/data/root.key","value":"'"$KEY"'"},
+                {"op":"replace","path":"/data/server.crt","value":"'"$CRT"'"}]'
       restartPolicy: OnFailure
 {{ end }}
