feat: renaming cluster's field resourceProfile to shInstanceProfile

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
@@ -13,7 +13,7 @@ spec:
   postgresVersion: '{{ .Values.config.postgresql.version }}'
   pgConfig: '{{ .Values.cluster.pgconfig }}'
   connectionPoolingConfig: '{{ .Values.cluster.poolingconfig }}'
-  resourceProfile: '{{ .Values.cluster.profile }}'
+  sgInstanceProfile: '{{ .Values.cluster.profile }}'
   {{- if .Values.cluster.backupconfig }}
   backupConfig: '{{ .Values.cluster.backupconfig }}'
   {{- end }}
