--- a/stackgres-k8s/install/helm/stackgres-operator/crds/cluster-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/cluster-crd.yaml
@@ -72,14 +72,14 @@ spec:
               description: >
                 Name of an existing StorageClass in the K8s cluster, that will be used to create the PersistentVolumes
                 for the instances of this cluster.
-            pgConfig:
+            sgPostgresConfig:
               type: string
               description: >
                 Name of the
                 [StackGresPostgresConfig](https://stackgres.io/doc/latest/04-postgres-cluster-management/02-configuration-tuning/02-postgres-configuration/)
                 to use for this cluster. It must exist. If not set, a default Postgres config, for the major version
                 selected, will be used.
-            connectionPoolingConfig:
+            sgPoolingConfig:
               type: string
               description: >
                 Name of the
@@ -88,7 +88,7 @@ spec:
                 (currently: [PgBouncer](https://www.pgbouncer.org/)). The connection pooler is implemented as a sidecar.
                 If not selected, a default configuration will be used. Note that you may disable connection pooling
                 altogether by not including the `pgbouncer` element in the `sidecars` property of the cluster.
-            backupConfig:
+            sgBackupConfig:
               type: string
               description: >
                 Name of the
